Temporarily remove use of a custom allocator for QNodePropertyChanges

Might be related to QTBUG-50704. The custom operators also need
improving so that we can use QSharedPointer::create() with them. Once
the change refactorings are complete we can look at re-adding the use
of the allocator to all change types not just QNodePropertyChange.

Task-number: QTBUG-50704
Task-number: QTBUG-51494
Change-Id: I339d6996f5dc8d68709ce11b6077a1b452db8bcf
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>