src/core/changes/qnodepropertychange.h
@@ -58,9 +58,6 @@ public:
     QVariant value() const;
     void setValue(const QVariant &value);
 
-    static void *operator new(size_t size);
-    static void operator delete(void *ptr, size_t size);
-
 protected:
     Q_DECLARE_PRIVATE(QNodePropertyChange)
     QNodePropertyChange(QNodePropertyChangePrivate &dd,
